@@ -37,8 +37,9 @@ public interface IServiceInvoker {
 	 * 			the call to invoke
 	 * @param scope
 	 * 			the scope to search for a handler
+	 * @return <code>true</code> if the call was performed, otherwise <code>false</code>
 	 */
-    void invoke(IServiceCall call, IScope scope);
+    boolean invoke(IServiceCall call, IScope scope);
 
 	/**
 	 * Execute the passed service call in the given object.
@@ -47,7 +48,8 @@ public interface IServiceInvoker {
 	 * 			the call to invoke
 	 * @param service
 	 * 			the service to use
+	 * @return <code>true</code> if the call was performed, otherwise <code>false</code>
 	 */
-    void invoke(IServiceCall call, Object service);
+    boolean invoke(IServiceCall call, Object service);
 
 }
